# obstacle_avoider_ros2

./: .gitignore  README.md
docs/: algorithm.md
obstacle_avoider/: package.xml  setup.py
obstacle_avoider/config/: slam.yaml
obstacle_avoider/launch/: bringup.launch.py
obstacle_avoider/obstacle_avoider/: avoider_node.py
obstacle_avoider/urdf/: robot.urdf
obstacle_avoider/worlds/: obstacles.world
scripts/: install.sh
